[package]
name = "state_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_no_alloc = "1.1.2"
cpal = "0.14.1"
dasp = "0.11.0"
eframe = "0.19.0"
hound = "3.5.0"
rfd = "0.10.0"
rtrb = "0.2.2"


[profile.release]
opt-level = 3