[package]
name = "state_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_no_alloc = "1.1.2"
cpal = "0.14.1"
dasp = "0.11.0"
hound = "3.5.0"
rfd = "0.10.0"
rtrb = "0.2.2"
bevy = "0.9"
ringbuf = "0.3.1"

[profile.release]
opt-level = 3


### Bevy

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
